Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6.18
Description
Our team is getting the following error when trying to compile and install MariaDB Server version 10.6.18 from source with -DWITH_WSREP=ON:
171.3 [ 90%] Building CXX object client/CMakeFiles/mariadb-binlog.dir/mysqlbinlog.cc.o
171.3 In file included from /mariadb-10.6.18/sql/log_event_old.cc:35,
171.3 from /mariadb-10.6.18/client/mysqlbinlog.cc:3251:
171.3 /mariadb-10.6.18/sql/wsrep_mysqld.h:37:10: fatal error: wsrep/provider.hpp: No such file or directory
171.3 37 | #include "wsrep/provider.hpp"
171.3 | ^~~~~~~~~~~~~~~~~~~~
171.3 compilation terminated.
171.3 gmake[2]: *** [client/CMakeFiles/mariadb-binlog.dir/build.make:76: client/CMakeFiles/mariadb-binlog.dir/mysqlbinlog.cc.o] Error 1
171.3 gmake[1]: *** [CMakeFiles/Makefile2:4016: client/CMakeFiles/mariadb-binlog.dir/all] Error 2
171.3 gmake: *** [Makefile:166: all] Error 2
Our compilation scripts work with 10.6.17 and previous versions.
I had a look at the release notes for 10.6.18 but didn't spot anything that I believe could be related to this issue.
I'm attaching a Dockerfile (based on our compilation script) that reproduces the error. To run the script do:
DOCKER_BUILDGIT=1 docker build --progress=plain --build-arg VERSION=10.6.18 .
Attachments
Issue Links
- is caused by
-
MDEV-18590 galera.versioning_trx_id: Test failure: mysqltest: Result content mismatch
-
- Closed
-
cmake/wsrep.cmake WITHOUT_SERVER means the WSREP_ON= isn't available and more importantly for the compile INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/wsrep-lib/include) didn't set the include path for the provider.hpp header.